2012-03-15 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_incidents.php: Fixed a problem with ACL 
	and views of incidents in simple view. 

2012-03-13 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/incidents/incident_detail.php: Fixed some problems	
	with items and fields visibility of incident creation form
	when the user has IW flag.

2012-03-13 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/incidents/incident_detail.php,
	include/functions_db.php: Fixed a bug related with default
	value for assigned used and also fixed search for external
	users (the search works as expected, but only shows the
	same user that is logged)

2012-03-12 Dario Rodriguez <dario.rodriguez@artica.es>

	*operation/incidents/incident_detail.php,
	operation/incidents/incident_attach_file.php,
	operation/incidents/incident_create_work.php: Fixed some
	problems of External user when trying to create workunits
	and upload files.

2012-03-12 Dario Rodriguez <dario.rodriguez@artica.es>

	* general/home.php,
	include/functions_db.php: Fixed a problem showing active
	incidents in home view.

2012-03-12 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/incidents/incident_detail.php: Fixed a bug
	which doesn't check the ACL properly for incident detail
	information.
	
2012-03-12 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_incidents.php,
	include/functions_db.php,
	operation/incidents/incident_tracking.php,
	operation/incidents/incident_files.php,
	operation/incidents/incident_detail.php,
	operation/incidents/incident_workunits.php,
	operation/incidents/incident_report.php: Fixed a bug that 
	disable the incident view for incident creator.

2012-03-07 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/incidents/incident_detail.php: Fixed a problem
	which hide field creator from create incident form for users
	with IM flag.

2012-03-07  Sancho Lerena <slerena@artica.es>

	* godmode/setup/setup_mail.php: Added help link.
